assign4/stsh-parser/parser.output
Grammar

    0 $accept: input $end

    1 input: %empty
    2      | in_out_cmd background
    3      | in_cmd PIPE cmd_list out_cmd background

    4 background: %empty
    5           | background AMPERSAND

    6 cmd_list: %empty
    7         | cmd_list cmd PIPE

    8 in_cmd: in_redir cmd
    9       | cmd in_redir
   10       | cmd

   11 out_cmd: out_redir cmd
   12        | cmd out_redir
   13        | cmd

   14 in_out_cmd: in_redir out_redir cmd
   15           | in_redir cmd out_redir
   16           | out_redir in_redir cmd
   17           | out_redir cmd in_redir
   18           | cmd in_redir out_redir
   19           | cmd out_redir in_redir
   20           | in_redir cmd
   21           | cmd in_redir
   22           | out_redir cmd
   23           | cmd out_redir
   24           | cmd

   25 in_redir: LT WORD

   26 out_redir: GT WORD

   27 cmd: WORD arg_list

   28 arg_list: %empty
   29         | arg_list WORD


Terminals, with rules where they appear

$end (0) 0
error (256)
WORD (258) 25 26 27 29
LT (259) 25
GT (260) 26
PIPE (261) 3 7
AMPERSAND (262) 5


Nonterminals, with rules where they appear

$accept (8)
    on left: 0
input (9)
    on left: 1 2 3, on right: 0
background (10)
    on left: 4 5, on right: 2 3 5
cmd_list (11)
    on left: 6 7, on right: 3 7
in_cmd (12)
    on left: 8 9 10, on right: 3
out_cmd (13)
    on left: 11 12 13, on right: 3
in_out_cmd (14)
    on left: 14 15 16 17 18 19 20 21 22 23 24, on right: 2
in_redir (15)
    on left: 25, on right: 8 9 14 15 16 17 18 19 20 21
out_redir (16)
    on left: 26, on right: 11 12 14 15 16 17 18 19 22 23
cmd (17)
    on left: 27, on right: 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21
    22 23 24
arg_list (18)
    on left: 28 29, on right: 27 29


State 0

    0 $accept: . input $end

    WORD  shift, and go to state 1
    LT    shift, and go to state 2
    GT    shift, and go to state 3

    $default  reduce using rule 1 (input)

    input       go to state 4
    in_cmd      go to state 5
    in_out_cmd  go to state 6
    in_redir    go to state 7
    out_redir   go to state 8
    cmd         go to state 9


State 1

   27 cmd: WORD . arg_list

    $default  reduce using rule 28 (arg_list)

    arg_list  go to state 10


State 2

   25 in_redir: LT . WORD

    WORD  shift, and go to state 11


State 3

   26 out_redir: GT . WORD

    WORD  shift, and go to state 12


State 4

    0 $accept: input . $end

    $end  shift, and go to state 13


State 5

    3 input: in_cmd . PIPE cmd_list out_cmd background

    PIPE  shift, and go to state 14


State 6

    2 input: in_out_cmd . background

    $default  reduce using rule 4 (background)

    background  go to state 15


State 7

    8 in_cmd: in_redir . cmd
   14 in_out_cmd: in_redir . out_redir cmd
   15           | in_redir . cmd out_redir
   20           | in_redir . cmd

    WORD  shift, and go to state 1
    GT    shift, and go to state 3

    out_redir  go to state 16
    cmd        go to state 17


State 8

   16 in_out_cmd: out_redir . in_redir cmd
   17           | out_redir . cmd in_redir
   22           | out_redir . cmd

    WORD  shift, and go to state 1
    LT    shift, and go to state 2

    in_redir  go to state 18
    cmd       go to state 19


State 9

    9 in_cmd: cmd . in_redir
   10       | cmd .
   18 in_out_cmd: cmd . in_redir out_redir
   19           | cmd . out_redir in_redir
   21           | cmd . in_redir
   23           | cmd . out_redir
   24           | cmd .

    LT  shift, and go to state 2
    GT  shift, and go to state 3

    PIPE      reduce using rule 10 (in_cmd)
    $default  reduce using rule 24 (in_out_cmd)

    in_redir   go to state 20
    out_redir  go to state 21


State 10

   27 cmd: WORD arg_list .
   29 arg_list: arg_list . WORD

    WORD  shift, and go to state 22

    $default  reduce using rule 27 (cmd)


State 11

   25 in_redir: LT WORD .

    $default  reduce using rule 25 (in_redir)


State 12

   26 out_redir: GT WORD .

    $default  reduce using rule 26 (out_redir)


State 13

    0 $accept: input $end .

    $default  accept


State 14

    3 input: in_cmd PIPE . cmd_list out_cmd background

    $default  reduce using rule 6 (cmd_list)

    cmd_list  go to state 23


State 15

    2 input: in_out_cmd background .
    5 background: background . AMPERSAND

    AMPERSAND  shift, and go to state 24

    $default  reduce using rule 2 (input)


State 16

   14 in_out_cmd: in_redir out_redir . cmd

    WORD  shift, and go to state 1

    cmd  go to state 25


State 17

    8 in_cmd: in_redir cmd .
   15 in_out_cmd: in_redir cmd . out_redir
   20           | in_redir cmd .

    GT  shift, and go to state 3

    PIPE      reduce using rule 8 (in_cmd)
    $default  reduce using rule 20 (in_out_cmd)

    out_redir  go to state 26


State 18

   16 in_out_cmd: out_redir in_redir . cmd

    WORD  shift, and go to state 1

    cmd  go to state 27


State 19

   17 in_out_cmd: out_redir cmd . in_redir
   22           | out_redir cmd .

    LT  shift, and go to state 2

    $default  reduce using rule 22 (in_out_cmd)

    in_redir  go to state 28


State 20

    9 in_cmd: cmd in_redir .
   18 in_out_cmd: cmd in_redir . out_redir
   21           | cmd in_redir .

    GT  shift, and go to state 3

    PIPE      reduce using rule 9 (in_cmd)
    $default  reduce using rule 21 (in_out_cmd)

    out_redir  go to state 29


State 21

   19 in_out_cmd: cmd out_redir . in_redir
   23           | cmd out_redir .

    LT  shift, and go to state 2

    $default  reduce using rule 23 (in_out_cmd)

    in_redir  go to state 30


State 22

   29 arg_list: arg_list WORD .

    $default  reduce using rule 29 (arg_list)


State 23

    3 input: in_cmd PIPE cmd_list . out_cmd background
    7 cmd_list: cmd_list . cmd PIPE

    WORD  shift, and go to state 1
    GT    shift, and go to state 3

    out_cmd    go to state 31
    out_redir  go to state 32
    cmd        go to state 33


State 24

    5 background: background AMPERSAND .

    $default  reduce using rule 5 (background)


State 25

   14 in_out_cmd: in_redir out_redir cmd .

    $default  reduce using rule 14 (in_out_cmd)


State 26

   15 in_out_cmd: in_redir cmd out_redir .

    $default  reduce using rule 15 (in_out_cmd)


State 27

   16 in_out_cmd: out_redir in_redir cmd .

    $default  reduce using rule 16 (in_out_cmd)


State 28

   17 in_out_cmd: out_redir cmd in_redir .

    $default  reduce using rule 17 (in_out_cmd)


State 29

   18 in_out_cmd: cmd in_redir out_redir .

    $default  reduce using rule 18 (in_out_cmd)


State 30

   19 in_out_cmd: cmd out_redir in_redir .

    $default  reduce using rule 19 (in_out_cmd)


State 31

    3 input: in_cmd PIPE cmd_list out_cmd . background

    $default  reduce using rule 4 (background)

    background  go to state 34


State 32

   11 out_cmd: out_redir . cmd

    WORD  shift, and go to state 1

    cmd  go to state 35


State 33

    7 cmd_list: cmd_list cmd . PIPE
   12 out_cmd: cmd . out_redir
   13        | cmd .

    GT    shift, and go to state 3
    PIPE  shift, and go to state 36

    $default  reduce using rule 13 (out_cmd)

    out_redir  go to state 37


State 34

    3 input: in_cmd PIPE cmd_list out_cmd background .
    5 background: background . AMPERSAND

    AMPERSAND  shift, and go to state 24

    $default  reduce using rule 3 (input)


State 35

   11 out_cmd: out_redir cmd .

    $default  reduce using rule 11 (out_cmd)


State 36

    7 cmd_list: cmd_list cmd PIPE .

    $default  reduce using rule 7 (cmd_list)


State 37

   12 out_cmd: cmd out_redir .

    $default  reduce using rule 12 (out_cmd)
